--- a/lib/coc-settings.json
+++ b/lib/coc-settings.json
@@ -10,5 +10,8 @@
     "<C-v>": "action:vsplit",
     "<C-s>": "action:split",
     "<C-w>": "command:wincmd k"
+  },
+  "snippets.extends": {
+    "javascriptreact": ["javascript"]
   }
 }
