fix: keep search result window on file open

--- a/lib/coc-settings.json
+++ b/lib/coc-settings.json
@@ -4,7 +4,8 @@
     "javascriptreact",
     "typescript",
     "typescriptreact",
-    "vue"
+    "vue",
+    "svelte"
   ],
   "git.addGBlameToVirtualText": true,
   "list.normalMappings": {
