--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,8 @@ pynvim = "^0.4.3"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[[tool.poetry.source]]
+name = "tuna"
+url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+default = true
