--- a/lib/coc-settings.json
+++ b/lib/coc-settings.json
@@ -17,5 +17,7 @@
     "javascriptreact": [
       "javascript"
     ]
-  }
+  },
+  "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": true,
+  "javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": true
 }
